Fix: 제목 상단 title 변경

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       @import url("https://cdn.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.3/packages/wanted-sans/fonts/webfonts/static/complete/WantedSans.min.css");
     </style>
     <link rel="icon" href="<%= BASE_URL %>favicon_dentrion.svg" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>DENTRION</title>
   </head>
   <body>
     <noscript>
